Re designed the ad div with a background vid and a map of EU, fixed header carousel to hide on small screens

--- a/static/css/logged-out-homepg-styles.css
+++ b/static/css/logged-out-homepg-styles.css
@@ -1691,7 +1691,6 @@ Last change:	04/21/2017
   -moz-transform: translateX(-50%) translateY(-50%);
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
-  background: url(../images/clouds.jpg) no-repeat;
   background-size: cover;
   /* object-fit: fill; */
 }
